# ekati

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  FileStorePartition.go  README.md  ahghee.sln  appveyor.yml  build.rs  example_node.json
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: build.yml  test.yml
ahghee.grpc/: MemoryPointer.partial.cs  Types.cs  ahghee.grpc.csproj  types.proto
benchmark/: Program.cs  benchmark.csproj
config/: log4rs.yaml
core/: FileStore.fs  FileStoreCommon.fs  FileStorePartition.fs  MemoryStore.fs  Metrics.fs  Program.fs  TinkerPop.fs  Types.fs  ahghee.fsproj
core.tests/: Tests.fs  core.tests.fsproj
docs/: ekati.lang.rrd.html  index.md
poc/: ahghee.sln
poc/UI/: Program.cs  UI.csproj
poc/ahghee.grpc/: MemoryPointer.partial.cs  Merge.cs  Types.cs  TypesGrpc.cs  ahghee.grpc.csproj  proto-build.sh  types.proto
poc/benchmark/: Program.cs  benchmark.csproj
poc/cli/: ContextExtensions.cs  Listener.cs  Printers.cs  Program.cs  cli.csproj  query1.wat  testscript.wat
poc/cli-grammer/: AHGHEE.g4  cli-grammer.csproj
poc/core/: FileStore.fs  FileStorePartition.fs  MemoryStore.fs  Program.fs  TinkerPop.fs  Types.fs  ahghee.fsproj  testdata.json  tinkerpop-modern.xml
poc/core.tests/: Program.fs  Tests.fs  core.tests.fsproj
poc/data-science-db/: package-lock.json  package.json  tsconfig.json
poc/parser/: Listener.cs  Printers.cs
poc/report/: program.fs  report.fsproj
protos/: types.proto
report/: program.fs  report-example.json  report.fsproj
src/: ahghee.sln  appveyor.yml  dockerfile  main.rs
(+133 files in other folders)
